[package]
name = "cargo-deps-readme"
version = "0.1.0"
edition = "2021"
authors = ["Yoliani"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
itertools = "0.10.5"
log = "0.4.17"
env_logger = "0.9.3"
lazy_static = "1.4.0"

